# Breadboard

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  README.md  breadboard.desktop  com.github.pisekpiskovec.Breadboard.yml  justfile
.github/workflows/: pr-build.yml  push-test.yml  release-build.yml
.helix/: config.toml
src/: config.rs  gui.rs  main.rs  memory.rs  port.rs  tests.rs  tui.rs  ui.rs  ui_main.rs
src/tui/: ascii.rs  config.rs  desktop.rs  flash.rs  list_item_list.rs  memory.rs  mod.rs  ports.rs  register.rs  status.rs
tests/: code.hex
tests/adc-tst/: test.asm  test.hex
tests/add-sub-tst/: test.asm  test.hex
tests/adiw-tst/: test.asm  test.hex
tests/and-eor-or-tst/: test.asm  test.hex
tests/andi-cbr-ori-tst/: test.asm  test.hex
tests/andi-ori-tst/: test.asm  test.hex
tests/asr-tst/: test.asm  test.hex
tests/branch-test/: test.asm  test.hex
tests/call-tst/: test.asm  test.hex
tests/ldi-tst/: test.asm  test.hex
tests/mov-tst/: test.asm  test.hex
tests/out-tst/: test.asm  test.hex
tests/push-pop-tst/: test.asm  test.hex
tests/rcall-tst/: test.asm  test.hex
tests/rjmp-tst/: test.asm  test.hex
tests/sreg-bit-clear-tst/: test.asm  test.hex
tests/template-tst/: test.asm  test.hex
