[package]
name = "Breadboard"
version = "1.1.2"
edition = "2024"
license = "MIT"
description = "An ATmega16 emulator"
repository = "https://github.com/pisekpiskovec/Breadboard"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/Breadboard", dest = "/usr/bin/breadboard", mode = "755"},
  { source = "breadboard.desktop", dest = "/usr/share/applications/breadboard.desktop", mode = "644"},
]

[dependencies]
iced = { version = "0.14.0", features = ["smol"] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
smol = "2"
wire = { git = "https://github.com/PisekPiskovec/Wire.git", tag = "v2"}

[dev-dependencies]
rand = "0.8"
