[package]
name = "Breadboard"
version = "1.1.4"
edition = "2024"
license = "MIT"
description = "An ATmega16 emulator"
repository = "https://github.com/pisekpiskovec/Breadboard"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/Breadboard", dest = "/usr/bin/breadboard", mode = "755"},
  { source = "breadboard.desktop", dest = "/usr/share/applications/breadboard.desktop", mode = "644"},
]

[package.metadata.generate-rpm.recommends]
avra = ">= 1.4.2"

[package.metadata.deb]
section = "education"
depends = "$auto"
recommends = "avra >= 1.4.2"
assets = [
  { source = "target/release/Breadboard", dest = "/usr/bin/breadboard", mode = "755"},
  { source = "breadboard.desktop", dest = "/usr/share/applications/breadboard.desktop", mode = "644"},
]

[features]
default = ["tui"]
gui = ["dep:iced", "dep:rfd", "dep:smol"]
tui = ["dep:appcui"]

[dependencies]
iced = { version = "0.14.0", features = ["smol"], optional = true }
rfd = { version = "0.17.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
smol = { version = "2", optional = true}
wire = { git = "https://github.com/PisekPiskovec/Wire.git", tag = "v2"}
appcui = { version = "*", optional = true }

[dev-dependencies]
rand = "0.9"
